# src/services/open-api-v1/v1/RatingController.cs
@@ -1,0 +1,80 @@
+using System;
+using System.Threading.Tasks;
+using Coolstore;
+using Microsoft.AspNetCore.Mvc;
+using VND.CoolStore.Services.OpenApiV1.v1.Grpc;
+using static Coolstore.RatingService;
+
+namespace VND.CoolStore.Services.OpenApiV1.v1
+{
+    [ApiVersion("1.0")]
+    [Route("rating/api/ratings")]
+    [ApiController]
+    public class RatingController : ControllerBase
+    {
+        private readonly RatingServiceClient _ratingServiceClient;
+
+        public RatingController(RatingServiceClient ratingServiceClient)
+        {
+            _ratingServiceClient = ratingServiceClient;
+        }
+
+        [HttpGet("ping")]
+        public IActionResult Index()
+        {
+            return Ok();
+        }
+
+        [HttpGet]
+        public async ValueTask<IActionResult> GetRatings()
+        {
+            return await HttpContext.EnrichGrpcWithHttpContext(
+                "rating-service",
+                async headers =>
+                {
+                    var response = await _ratingServiceClient.GetRatingsAsync(new Google.Protobuf.WellKnownTypes.Empty(), headers);
+                    return Ok(response.Ratings);
+                });
+        }
+
+        [HttpGet("productId:guid")]
+        public async ValueTask<IActionResult> GetRatingByProductId(Guid productId)
+        {
+            return await HttpContext.EnrichGrpcWithHttpContext(
+                "rating-service",
+                async headers =>
+                {
+                    var request = new GetRatingByProductIdRequest
+                    {
+                        ProductId = productId.ToString()
+                    };
+                    var response = await _ratingServiceClient.GetRatingByProductIdAsync(request, headers);
+                    return Ok(response.Rating);
+                });
+        }
+
+        [HttpPost]
+        public async ValueTask<IActionResult> CreateRating(CreateRatingRequest request)
+        {
+            return await HttpContext.EnrichGrpcWithHttpContext(
+                "rating-service",
+                async headers =>
+                {
+                    var response = await _ratingServiceClient.CreateRatingAsync(request, headers);
+                    return Ok(response.Rating);
+                });
+        }
+
+        [HttpPut]
+        public async ValueTask<IActionResult> UpdateRating(UpdateRatingRequest request)
+        {
+            return await HttpContext.EnrichGrpcWithHttpContext(
+                "rating-service",
+                async headers =>
+                {
+                    var response = await _ratingServiceClient.UpdateRatingAsync(request, headers);
+                    return Ok(response.Rating);
+                });
+        }
+    }
+}
